; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/startup/extr_pesect.c__GetPEImageBase.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/startup/extr_pesect.c__GetPEImageBase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__ImageBase = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @_GetPEImageBase() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  store i32* @__ImageBase, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @_ValidateImageBase(i32* %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %9

7:                                                ; preds = %0
  %8 = load i32*, i32** %2, align 8
  store i32* %8, i32** %1, align 8
  br label %9

9:                                                ; preds = %7, %6
  %10 = load i32*, i32** %1, align 8
  ret i32* %10
}

declare dso_local i32 @_ValidateImageBase(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
